# sre-agent

./: .env.example  .gitignore  Makefile  README.md  app.py  cdk.json  pyproject.toml  test.py
config/: dev.yaml
dashboard/: config.js
docs/: architecture.excalidraw  config.js  index.html
makefiles/: cdk.mk  code-quality.mk  config.mk  convenience.mk  manual-tests.mk  scenarios.mk  setup.mk  users.mk
scripts/: create_user.py  list_users.py
src/agent/: Dockerfile  __init__.py  agent_handler.py  config.py  main.py  pyproject.toml
src/agent/hooks/: __init__.py  token_usage_tracker.py
src/agent/prompts/: __init__.py  loader.py  system_prompt.md
src/agent/skills/: __init__.py  cost_estimation.md  incident_triage.md  loader.py
src/agent/tools/: __init__.py  cloudwatch.py  jira.py  skills.py
src/cdk/: __init__.py  config.py  stack.py
src/cdk/constructs/: __init__.py  cognito.py  docker_lambda.py  runtime.py
src/cdk/utils/: __init__.py  cleanup.py  strings.py
src/common/: __init__.py  logger.py
src/jira_webhook/: Dockerfile  main.py
tests/common/auth/: cognito_user.py
tests/evals/: test_incident_triage.py
tests/evals/scenarios/: slow_db_queries.py
tests/manual/runtimes/agent/: chat_client.py  hello.py  invoke_agent.py
tests/scenarios/slow_db_queries/: cleanup.py  inject.py  jira.md  scenario.md
tests/scenarios/slow_db_queries/logs/: api-service.jsonl  db-primary.jsonl  db-replica-1.jsonl  notification-service.jsonl  payment-service.jsonl
tests/scenarios/slow_db_queries/triage_results/: agent.py  comparison.md  human.py
